# llm_project

./: .gitignore  AGENTS.md  README.md  env_setup.md  pyproject.toml  reference.md
configs/: README.md  deepspeed_zero2.json  deepspeed_zero2_debug.json  deepspeed_zero3.json  eval.yaml  grpo.yaml  sft.yaml  sft_debug.yaml
configs/templates/: grpo.yaml  sft.yaml
report_templates/: experiment_inventory.md  main.bib  main.tex  results_tables.md
report_templates/figures/data/: grpo_epoch_eval.csv  grpo_step_timing_history.csv  grpo_step_timing_summary.csv  grpo_step_timing_wandb_fetch_metadata.json  grpo_training_history.csv  grpo_wandb_fetch_metadata.json  sft_epoch_eval.csv  sft_training_history.csv  sft_wandb_fetch_metadata.json
report_templates/scripts/: plot_grpo_curves.py  plot_grpo_step_timing.py  plot_sft_curves.py
requirements/: base.txt
scripts/: doctor.py  eval_base.sh  eval_grpo.sh  eval_sft.sh  plot_all.sh  resolve_flash_attn_wheel.py  run_grpo_8gpu.sh  run_sft_8gpu.sh
src/llm_project/: config.py  distributed.py  dtypes.py  logging_utils.py  math_utils.py  models.py  seed.py
src/llm_project/cli/: eval_gsm8k.py  eval_mmlu.py  plot_curves.py  train_grpo.py  train_sft.py  vllm_rollout_server.py
src/llm_project/data/: examples.md  gsm8k_dataset.py  mmlu_dataset.py  prompts.py  sft_dataset.py
src/llm_project/evaluation/: gsm8k_eval.py  mmlu_eval.py  vllm_utils.py
src/llm_project/rollout/: __init__.py  factory.py  formatting.py  hf_backend.py  types.py  (+4 more)
tests/: test_grpo_loss.py  test_math_utils.py  test_mmlu_eval.py  test_prompts.py
(+4 files in other folders)
